--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
             </ul>    
             <header classs="p-5">
                 <div id="acessibilidade" class="menu-acessibilidade">
-                    <button id="aumentar fonte" class="btn btn-primary fw-bold">Aa </button>
+                    <button id="aumentar fonte" class="btn btn-primary fw-bold rotacao-botao">acessibilidade </button>
+                    <div id="opcoes-acessiblilidade" class="opcoes-acessiblilidade apresenta-lista">
+                        <button id="aumentar-fonte" class="btn btn-primary fw-bold">A +</button>
+                        <button id="diminur-fonte" class="btn btn-primary fw-bold">A  -</button>
+                    </div>
                 </div>
             </header>      
         </nav>
